refactor(domain): implementar encapsulamiento estricto y Domain-Driven Design (DDD)
Este commit introduce una refactorización arquitectónica profunda en el núcleo
de la aplicación, migrando todas las entidades hacia un modelo de Dominio Rico
(Rich Domain) para garantizar la consistencia absoluta del estado.

Se abandonó el modelo anémico eliminando constructores públicos y setters,
transfiriendo la responsabilidad de la validación y mutación a las propias entidades.

Cambios arquitectónicos clave:
- Encapsulamiento total: Implementación de Factory Methods (ej. `createNew`, `restore`)
  para la creación y reconstrucción segura de Agregados y Objetos de Valor.
- Protección de Invariantes: Centralización de reglas de negocio y validaciones de
  estado dentro de las entidades (principio "Tell, Don't Ask").
- Excepciones Semánticas: Reemplazo de excepciones genéricas por excepciones de
  dominio puras y descriptivas para cada contexto de negocio.
- Orquestación Segura: Actualización de Mappers (JPA/DTO) y Casos de Uso para
  ensamblar objetos de abajo hacia arriba (Bottom-Up) respetando los límites
  de los Aggregate Roots, evitando mutaciones forzadas.

Motivo: Blindar el sistema contra estados inválidos o corruptos provenientes
de la base de datos o de las peticiones HTTP, estableciendo un estándar
de grado Enterprise para el escalamiento futuro del proyecto.